--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,37 +1,44 @@
-name: Deploy React to S3
+name: Deploy React Frontend to AWS S3
 
+# Trigger deployment on push to main branch
 on:
   push:
     branches:
-      - main   # deploy on push to main
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Setup Node
+      # Step 2: Setup Node.js environment
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: npm install
         working-directory: frontend
 
+      # Step 4: Build React frontend (Vite)
       - name: Build React
         run: npm run build
         working-directory: frontend
 
+      # Step 5: Sync build folder to S3 bucket
       - name: Deploy to S3
         uses: aws-actions/s3-sync@v2
         with:
-          source-dir: frontend/build
-          bucket: YOUR_BUCKET_NAME
-          region: YOUR_REGION
-          delete: true
+          source-dir: frontend/dist   # Vite build output
+          bucket: facts-frontend      # Replace with your S3 bucket name
+          region: YOUR_REGION         # e.g., us-east-1
+          delete: true                # Remove files in S3 not in build
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
