--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
 name: Deploy React Frontend to AWS S3
 
-# Trigger deployment on push to main branch
 on:
   push:
     branches:
@@ -11,34 +10,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v3
 
-      # Step 2: Setup Node.js environment
-      - name: Setup Node.js
+      - name: Setup Node
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
-      # Step 3: Install dependencies
-      - name: Install dependencies
-        run: npm install
+      - name: Install Dependencies
+        run: npm ci
         working-directory: frontend
 
-      # Step 4: Build React frontend (Vite)
-      - name: Build React
+      - name: Build Frontend
         run: npm run build
         working-directory: frontend
 
-      # Step 5: Sync build folder to S3 bucket
       - name: Deploy to S3
-        uses: aws-actions/s3-sync@v2
+        uses: aws-actions/s3-sync@v2       
         with:
-          source-dir: frontend/dist   # Vite build output
-          bucket: facts-frontend      # Replace with your S3 bucket name
-          region: YOUR_REGION         # e.g., us-east-1
-          delete: true                # Remove files in S3 not in build
+          source-dir: frontend/dist
+          bucket: facts-frontend            # Replace with your S3 bucket
+          region: YOUR_REGION               # e.g., us-east-1
+          delete: true
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
