--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,8 @@ jobs:
         uses: aws-actions/s3-sync@v2       
         with:
           source-dir: frontend/dist
-          bucket: facts-frontend            # Replace with your S3 bucket
-          region: YOUR_REGION               # e.g., us-east-1
+          bucket: facts-frontend           
+          region: YOUR_REGION               
           delete: true
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
